[package]
name = "quantile_compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantiles = "0.7.1"
rand = "0.8.4"
rand_distr = "0.4.2"
ordered-float = "2.8.0"
rand_pcg = "0.3.1"
tdigest = { version = "0.2.3", features = ["use_serde"], git = "https://github.com/PSeitz/t-digest" }
thousands = "0.2.0"
prettytable-rs = { version = "0.10.0", default-features = false }
zw-fast-quantile = "0.2.3"
hdrhistogram = "7.5.2"
bincode = "1.3.3"
sketches-ddsketch = { version = "0.2.0", features = ["use_serde"], git = "https://github.com/PSeitz/rust-sketches-ddsketch" }
sketches-rust = { version = "0.1.1", git = "https://github.com/PSeitz/sketches-rust" }
itertools = "0.10.5"
peakmem-alloc = "0.1.0"

[profile.release]
debug = true
lto = true
opt-level = 3
panic = "unwind"
